# comp6713-medqa

./: .env.example  .gitignore  01_data_exploration.ipynb  02_baseline.ipynb  03_bert_finetuning.ipynb  04_rag_pipeline.ipynb  05_evaluation.ipynb  6713_pre_final.pptx  6713_report.docx  COMP6713 report(7).docx  CONTRIBUTION.md  README.md  SCOPE_MAPPING.md  evaluation_results.json  main.py  pyproject.toml  report.docx  run_eval.py
data/processed/: tfidf_vectorizer.pkl
medqa/: _log.py  _seed.py  cli.py  config.py
medqa/data/: loader.py  preprocessor.py
medqa/evaluation/: metrics.py  qualitative.py
medqa/models/: baseline.py  bert_qa.py  llm_qa.py  registry.py
medqa/retrieval/: rag_pipeline.py  reranker.py  vectorstore.py
medqa/training/: __init__.py  custom_loss.py
notebooks/: 01_data_exploration.ipynb  02_baseline.ipynb  03_bert_finetuning.ipynb  04_rag_pipeline.ipynb  05_evaluation.ipynb
reports/: _ablation_ckpt_QE_RR1.jsonl  _ablation_ckpt_QE_RR3.jsonl  _ablation_ckpt_QE_RR5.jsonl  _ablation_ckpt_QE_noRR.jsonl  _ablation_ckpt_noQE_RR1.jsonl  _ablation_ckpt_noQE_RR3.jsonl  _ablation_ckpt_noQE_RR5.jsonl  _ablation_ckpt_noQE_noRR.jsonl  ablation_results.json  ablation_table.md  evaluation_predictions_default.json  evaluation_predictions_hp.json  evaluation_results_default.json  evaluation_results_hp.json  hp_search_results.json
scripts/: ablation.py  build_rag_index.py  finetune_bert.py  hp_search.py  setup_scispacy.py
tests/: test_metrics.py  test_preprocessor.py
