[project]
name = "comp6713-medqa"
version = "0.1.0"
description = "Medical Literature QA System - COMP6713 Group Project"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    # Data
    "datasets>=2.19.0",
    "pandas>=2.2.0",
    # NLP & Models
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "sentence-transformers>=3.0.0",
    "evaluate>=0.4.0",
    "bert-score>=0.3.13",
    # RAG & Vector Store
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "langchain-text-splitters>=0.2.0",
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    # Retrieval & Reranking (CrossEncoder via sentence-transformers)
    # Baseline
    "scikit-learn>=1.4.0",
    "nltk>=3.8.0",
    # Demo & CLI
    "gradio>=4.36.0",
    # Utilities
    "tqdm>=4.66.0",
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "rouge-score>=0.1.2",
    # Hyperparameter search
    "optuna>=3.6.0",
    # UMLS entity linking for RAG query expansion (§6.1).
    # The model file `en_core_sci_lg` is NOT on PyPI — it's installed by
    # `scripts/setup_scispacy.py` (VS Code task "0'. Install scispaCy model").
    # Run that task once after `uv sync`; first run also downloads ~1 GB of
    # UMLS KB data to ~/.scispacy/. Pipeline composites chain it automatically.
    "scispacy>=0.5.4",
    "spacy>=3.7,<3.8",
    # Pin numpy < 2: the scispaCy 0.5.4 stack forces spacy 3.7.x -> thinc
    # 8.2.x (spacy 3.7 requires thinc<8.3), whose PyPI wheels are compiled
    # against the old numpy 1.x PyArray_Descr ABI (88 bytes). Letting uv
    # resolve numpy 2.x triggers `ValueError: numpy.dtype size changed
    # (96 vs 88)` at `import spacy`. Drop this pin once scispaCy releases
    # a build against spacy 3.8 (which allows thinc 8.3+ / numpy 2).
    "numpy<2",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "notebook>=7.2.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -ra shows reasons for skipped/xfailed tests; --strict-markers catches typos
# in @pytest.mark.xxx; -q keeps CI logs readable.
addopts = "-ra -q --strict-markers"
filterwarnings = [
    # scispaCy / bert_score pull in deprecated torch/transformers paths; they
    # are not actionable for us, so silence them at the eval boundary.
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[project.scripts]
medqa = "medqa.cli:main"

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

# PyTorch CUDA index — required for GPU support on Windows/Linux
# cu130 = CUDA 13.0, required for RTX 50 series (Blackwell)
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["medqa"]
